2002-11-14  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Added support for foomatic-rip running as a PPR
	  RIP (PPR 1.5x), before it could only run as a PPR interface. To
	  use it as a PPR RIP one sets up the print queue as follows:

	     ln -s foomatic-rip /usr/lib/ppr/lib/
	     ppad interface foo parallel /dev/lp0
	     ppad ppd foo /path/to/foo.ppd
	     ppad rip foo foomatic-rip other x

	  (the "x" in the end of the last line is needed to work around a
	  bug.)

	  Use "PPR_VERSION" environment variable to auto-detect whether
	  PPR is the spooler.
	
	  Prepared foomatic-rip for PDQ support.

	  Added comment about the supported spoolers.
	
2002-11-13  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: The basic functionality of foomatic-rip is now
	  implemented, all features of the old "*omatic" filters are also
	  available in foomatic-rip.

	  Now text and other non-PostScript files can be printed,
	  foomatic-rip calles "a2ps", "enscript", or "mpage" automatically
	  when it detects a non-PostScript file.

	  Improved command lines of "a2ps", "enscript", and "mpage" to
	  generate wider margins (so that nothing gets cut off) and
	  wrapping of too long lines (to not loose information).

	  The "docs" option lets a help page being printed, independent of
	  the file originally sent. This works also with manufacturer-
	  supplied PPD files of PostScript printers. CUPS prints the
	  documentation page with its native "texttops" filter by default,
	  but this can be changed to "a2ps", "enscript", or "mpage" with
	  "textfilter" line in /etc/foomatic/filter.conf.

	  Custom page sizes work also on manufacturer-supplied PPD files
	  now,

	  Fixed control of quiet, verbose, and debug mode from the command
	  line ("-q", "-v", "--debug").
	
	  foomatic-rip used without spooler does not have any console
	  output any more (except error messages). Use the "-v"
	  ("Verbose") for log output on the console and "--debug" for